--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,8 @@ lib_deps =
 	obsttube/CryptoAES_CBC@^1.0.0
 	bakercp/CRC32@^2.0.0
 	obsttube/AES_CMAC@^1.0.0
-	
+	computer991/Arduino_MFRC522v2@^2.0.1
+
 [ndef]
 build_flags =
 	; -DMIFARE_ULTRALIGHT_DEBUG
