Plain_ReadData example

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,11 @@ framework = arduino
 build_type = debug
 debug_init_break = tbreak app_main
 lib_deps =
-	miguelbalboa/MFRC522@^1.4.10
+	; miguelbalboa/MFRC522@^1.4.10
 	obsttube/CryptoAES_CBC@^1.0.0
 	bakercp/CRC32@^2.0.0
 	obsttube/AES_CMAC@^1.0.0
-	computer991/Arduino_MFRC522v2@^2.0.1
+	; computer991/Arduino_MFRC522v2@^2.0.1
 
 [ndef]
 build_flags =
